Fri Sep  4 09:11:38 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac vms/README.vms: Fix --with-tdsver option

Thu Sep  3 13:53:26 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* TODO src/tds/token.c:
	- fix NULL becaming empty strings under Sybase

Thu Sep  3 11:25:04 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c: fix NTLM2 check

Wed Sep  2 11:26:14 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/numeric.c: fix dblib numeric test for Sybase

Tue Sep  1 10:01:45 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c: fix numeric -> numeric conversions

Tue Sep  1 07:47:25 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/rpc.c src/dblib/unittests/.cvsignore:
	* src/dblib/unittests/Makefile.am src/dblib/unittests/common.c:
	* src/dblib/unittests/common.h src/dblib/unittests/numeric.c:
	* src/dblib/unittests/numeric.sql:
	- add and fix test for numeric in dblib

Thu Aug 27 15:36:42 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/cancel.c:
	- override odbcinst.ini in cancel test to avoid hang using unixODBC

Thu Aug 27 14:31:52 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/genparams.c: update genparams test

Wed Aug 26 14:31:33 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/sql2tds.c src/odbc/unittests/genparams.c src/tds/data.c:
	* src/tds/query.c src/tds/tds_checks.c src/tds/token.c:
	- more fixes for varchar(max)/varbinary(max)

Wed Aug 26 14:18:35 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/common.c:
	- make check now works if configure was launched from another
	  directory

Wed Aug 26 14:16:00 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/test-dist.sh: test-dist now works with new configure script

Tue Aug 25 16:31:41 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/freetds_autobuild: